# sentinel

./: .gitignore  INTEGRATION_NH.md  README.md  pyproject.toml
examples/: basic_setup.py  custom_backend.py  neural_holding.py
sentinel/: __init__.py  __main__.py  config.py  engine.py
sentinel/adapters/: base.py  desktop.py  telegram.py
sentinel/commands/: telegram_handler.py
sentinel/core/: attention_budget.py  cortical_filter.py  event.py
sentinel/monitors/: algotrade.py  base.py  health.py  nh_events.py  sse.py
tests/: test_cortical_filter.py  test_monitors.py  test_sse_consumer.py  test_telegram_commands.py
